api/v1alpha/istio-manifests/1.4/authz/allow-config-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-config
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths: 
        - /v1alpha/resources/configuration
