api/v1alpha/istio-manifests/1.4/authz/allow-data-consumers-policy.tmpl.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-data-consumers
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/v1alpha/projects/$PROJECT_ID/products"]
    - operation:
        methods: ["GET","POST"]
        paths: ["/v1alpha/projects/$PROJECT_ID/accounts:activate"]
    when:
    - key: request.auth.claims[aud]
      values:
      - $OAUTH_CLIENT_ID
