api/v1alpha/istio-manifests/1.4/authz/allow-data-consumers-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-data-consumers
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths: 
        - /v1alpha/configuration
        - /v1alpha/products
        - /v1alpha/resources/projects
    - operation:
        methods:
        - GET
        - POST
        paths: 
        - /v1alpha/accounts:activate
    when:
    - key: request.auth.claims[aud]
      values:
      - $OAUTH_CLIENT_ID
