api/v1alpha/istio-manifests/1.4/authz/allow-data-producers-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-data-producers
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[iss]
      values:
      - accounts.google.com
      - https://accounts.google.com
      - https://securetoken.google.com/$PROJECT_ID
    - key: request.auth.claims[email]
      values: ["$DATA_PRODUCERS"]
