api/v1alpha/istio-manifests/1.4/authz/allow-global-docs-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-docs-requests
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths:
        - /v1alpha/docs
        - /v1alpha/docs/*
