api/v1alpha/istio-manifests/1.4/authz/allow-global-preflight-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-global-preflight
  namespace: datashare
spec:
  action: ALLOW
  rules:
  - services: ["*"]
    methods: ["OPTIONS"]
