api/v1alpha/istio-manifests/1.4/authz/allow-knative-serving-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-knative-serving
  namespace: datashare
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - knative-serving
    to:
    - operation:
        methods:
        - GET
        paths:
        - /healthz
        - /metrics
        - /probe
        - /_internal/knative/*
