api/v1alpha/istio-manifests/1.4/authz/allow-marketplace-service-account-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-marketplace-service-account
  namespace: datashare-apis
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - POST
        paths:
        - /v1alpha/projects/$PROJECT_ID/accounts:register
        - /v1alpha/projects/$PROJECT_ID/procurements:myProducts*
