api/v1alpha/istio-manifests/1.4/authz/allow-nothing-default-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing-default
  namespace: default
spec:
  {}
