api/v1alpha/istio-manifests/1.4/authz/allow-service-accounts-policy.tmpl.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-service-accounts
  namespace: datashare
spec:
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[aud]
      values:
      - http://example.com
    - key: request.auth.claims[iss]
      values:
      - https://accounts.google.com
    - key: request.auth.claims[email]
      values: [$SERVICE_ACCOUNT_EMAILS]
